# rag-agent-v1

./: .env  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  test_data_loader.ipynb  vector_db.py
data_normalizers/: c-a_manual.py  normalise_nodes.py
data_normalizers/configs/: c-a_manual.yaml
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/4884fe1e-ecb3-4df8-b5d4-4598e13a0b09/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/51e5f4b7-de6b-48d8-8815-ec67f669de6b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/6039c991-2358-4840-b687-5eeeff19678e/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/a6f7cd7d-ae7f-4631-8482-c041c2d91094/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/c201e893-6241-4f0f-9957-e9aa6935f5ca/: mutable_id_tracker.mappings  mutable_id_tracker.versions
