[project]
name = "rag-prod-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "inngest>=0.5.18",
    "ipykernel>=7.2.0",
    "llama-index-core>=0.14.21",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-readers-file>=0.6.0",
    "docling>=2.0",
    "ollama>=0.6.2",
    "pypdf>=6.11.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.57.0",
]
